footer desktop, footer mobile

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,2 +1,11 @@
 @value whiteBasic: #FFFFFF;
 @value blackBasic: #000000;
+@value black: #232323;
+@value green: #25716C;
+@value red: #DC4E41;
+@value gray: #919191;
+@value gray1: #AFAFAF;
+@value gray2: #F8F9FA;
+@value gray3: #F1F1F1;
+@value gray4: #FAFAFA;
+@value gray5: #E5E5E5;
