--- a/src/apps/client/ui/components/Footer/Footer.css
+++ b/src/apps/client/ui/components/Footer/Footer.css
@@ -1,7 +1,147 @@
-.root {
-    text-align: center;
-    line-height: 70px;
-    font-family: sans-serif;
-    height: 70px;
-    background-color: #adbba9;
+@value whiteBasic from '../../../../../css/colors.css';
+@value black from '../../../../../css/colors.css';
+@value green from '../../../../../css/colors.css';
+
+.footer {
+    background-color: whiteBasic;
+}
+
+.footerContainer {
+    max-width: 1360px;
+    margin: 0 auto;
+    padding: 0 60px;
+    height: 86px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media (max-width: 992px) {
+        flex-direction: column;
+        height: 251px;
+    }
+}
+
+.iconsWrapper {
+    display: flex;
+
+    @media (max-width: 992px) {
+        order: 2;
+    }
+}
+
+.googlePlus,
+.facebook {
+    width: 36px;
+    height: 36px;
+}
+
+.googlePlus {
+    background-image: url("./img/google-plus.svg");
+    margin-right: 30px;
+}
+
+.facebook {
+    background-image: url("./img/facebook.svg");
+}
+
+.developedWrapper {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: HelveticaNeueCyr;
+    font-size: 14px;
+    line-height: 14px;
+
+    @media (max-width: 992px) {
+        order: 3;
+        margin: 20px;
+        position: static;
+        transform: translateX(0);
+    }
+}
+
+.stubbsText {
+    font-family: HelveticaNeueCyrBold;
+    text-decoration: none;
+    color: black;
+    margin-top: 2px;
+    padding-bottom: 2px;
+
+    &:hover {
+        border-bottom: 2px solid green;
+        padding-bottom: 0;
+    }
+}
+
+.contactsWrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    @media (max-width: 992px) {
+        order: 1;
+        align-items: center;
+        text-align: center;
+        margin: 20px 0 30px;
+    }
+
+    &:after {
+        position: absolute;
+        content: '';
+        width: 287px;
+        height: 1px;
+        right: 0;
+        bottom: -10px;
+        background-color: black;
+
+        @media (max-width: 992px) {
+            right: auto;
+            bottom: -5px;
+        }
+    }
+}
+
+.contactsLinkWrapper {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 992px) {
+        flex-direction: column;
+    }
+
+    &:first-child {
+        width: 259px;
+        margin-bottom: 8px;
+
+        @media (max-width: 992px) {
+            width: auto;
+            margin-bottom: 0;
+        }
+    }
+
+    &:last-child {
+        width: 330px;
+
+        @media (max-width: 992px) {
+            width: auto;
+            flex-direction: column-reverse;
+        }
+    }
+}
+
+.contactsLink {
+    font-family: RoundedElegance;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 16px;
+    color: black;
+
+    @media (max-width: 992px) {
+        margin-bottom: 10px;
+    }
 }
