--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -1,33 +1,16 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value green from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
-@value gray2 from '../../../../../css/colors.css';
 
-.cart {
+.wishList {
+    margin-right: 20px;
     cursor: pointer;
     position: relative;
     width: 18px;
     height: 16px;
 }
 
-.iconCart:after {
-    content: url("./img/cart.png");
-}
-
-.quantityAll {
-    font-family: Rubik;
-    font-size: 10px;
-    position: absolute;
-    right: -11px;
-    top: -8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 12px;
-    height: 13px;
-    background: green;
-    color: whiteBasic;
-    border-radius: 50%;
+.iconWishList:after {
+    content: url("./img/wish.png");
 }
 
 .popupContainer {
@@ -75,40 +58,6 @@
     margin: 20px 0 40px;
     text-align: center;
     color: black;
-}
-
-.totalPriceContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 68px;
-    background-color: gray2;
-}
-
-.totalPriceWrapper {
-    display: flex;
-    width: 330px;
-    justify-content: space-between;
-}
-
-.totalPrice {
-    font-size: 24px;
-    line-height: 28px;
-    color: black;
-    text-shadow: -0.1px 0 black, 0 0.1px black, 0.1px 0 black, 0 -0.1px black;
-}
-
-.checkoutBtn {
-    @mixin removeDefaultButton;
-    margin-top: 20px;
-    background-color: black;
-    cursor: pointer;
-    font-family: RoundedElegance;
-    font-size: 18px;
-    line-height: 21px;
-    color: whiteBasic;
-    padding: 10px 20px;
 }
 
 .continueShopping {
