--- a/src/apps/client/ui/pages/DeliveryAndPayment/DeliveryAndPayment.css
+++ b/src/apps/client/ui/pages/DeliveryAndPayment/DeliveryAndPayment.css
@@ -1,3 +1,4 @@
+@value whiteBasic from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
 
 .deliveryAndPayment {
@@ -6,21 +7,33 @@
     flex-direction: column;
     align-items: center;
     color: black;
+    background-color: whiteBasic;
+    position: relative;
+
+    @media (max-width: 600px) {
+        align-items: stretch;
+        padding: 0 16px;
+    }
 }
 
 .title {
-    margin: 30px auto;
+    margin: 30px auto 0;
     font-size: 24px;
     line-height: 28px;
-    text-align: center;
-
+    text-shadow: -0.1px 0 black, 0 0.1px black, 0.1px 0 black, 0 -0.1px black;
     position: relative;
 
-    /* display: inline-block; */
+    @media (max-width: 768px) {
+        font-size: 20px;
+        line-height: 23px;
+    }
+
+    @media (max-width: 600px) {
+        margin: 20px auto 0 0;
+    }
 
     &:before {
         position: absolute;
-        display: inline-block;
         content: '';
         top: 50%;
         transform: translateY(-50%);
@@ -28,26 +41,68 @@
         width: 287px;
         height: 2px;
         background-color: black;
+
+        @media (max-width: 950px) {
+            width: 200px;
+        }
+
+        @media (max-width: 768px) {
+            width: 180px;
+        }
+
+        @media (max-width: 680px) {
+            width: 130px;
+        }
+
+        @media (max-width: 600px) {
+            width: 100px;
+            left: calc(100% + 40px);
+        }
+
+        @media (max-width: 359px) {
+            width: 60px;
+        }
     }
 }
 
 .options {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 110px 0 168px;
     display: flex;
-    width: 591px;
-    justify-content: space-between;
-
     font-size: 14px;
     line-height: 16px;
+
+    @media (max-width: 600px) {
+        flex-direction: column;
+        padding: 20px 0 30px;
+    }
+}
+
+.delivery {
+    margin-right: 180px;
+
+    @media (max-width: 768px) {
+        margin-right: 140px;
+    }
+
+    @media (max-width: 680px) {
+        margin-right: 80px;
+    }
+
+    @media (max-width: 600px) {
+        margin: 0 0 30px 0;
+    }
 }
 
 .optionsTitle {
     font-size: 18px;
     line-height: 21px;
     margin-bottom: 10px;
+    text-shadow: -0.1px 0 black, 0 0.1px black, 0.1px 0 black, 0 -0.1px black;
+
+    @media (max-width: 768px) {
+        font-size: 16px;
+        line-height: 18px;
+    }
 }
 
 .option {
@@ -60,6 +115,10 @@
 
     &:last-child {
         margin-bottom: 0;
+    }
+
+    @media (max-width: 600px) {
+        margin-bottom: 10px;
     }
 }
 
