--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -1,1 +1,193 @@
 @value whiteBasic from '../../../../../css/colors.css';
+@value black from '../../../../../css/colors.css';
+@value green from '../../../../../css/colors.css';
+@value gray3 from '../../../../../css/colors.css';
+@value gray4 from '../../../../../css/colors.css';
+
+.productPage {
+    position: relative;
+}
+
+.subCategoriesWrap {
+    padding: 0 16px;
+    background: gray3;
+    width: 100%;
+    margin-top: -40px;
+
+    @media (max-width: 1210px) {
+        border-top: 1px solid white;
+        margin: 0;
+    }
+
+    @media (max-width: 600px) {
+        border: none;
+        background: white;
+    }
+}
+
+.subCategories {
+    padding: 2px 225px 0px;
+    max-width: 1240px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+
+    @media (max-width: 1210px) {
+        padding: 2px 0 0 0;
+    }
+
+    @media (max-width: 960px) {
+        justify-content: flex-start;
+    }
+
+    @media (max-width: 960px) {
+        padding: 7px 0;
+    }
+
+    @media (max-width: 600px) {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.subCategory {
+    font: 16px/38px RoundedElegance;
+    color: black;
+    text-decoration: none;
+    margin: 0 25px;
+
+    @media (max-width: 960px) {
+        margin-left: 0;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    @media (max-width: 750px) {
+        margin-right: 15px;
+    }
+
+    @media (max-width: 600px) {
+        font-size: 14px;
+        line-height: 26px;
+        margin: 0;
+    }
+
+}
+
+.filterPanelWrap {
+    padding: 0 16px;
+    background: whiteBasic;
+    width: 100%;
+
+    @media (max-width: 600px) {
+        background: gray3;
+        padding-top: 20px;
+    }
+}
+
+.filterPanel {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1240px;
+    margin: 0 auto;
+}
+
+.results {
+    font: 16px/18px RoundedElegance;
+    color: black;
+    margin-top: 16px;
+    white-space: nowrap;
+
+    @media (max-width: 960px) {
+        position: absolute;
+        right: 16px;
+        top: 12px;
+        margin-top: 0;
+    }
+}
+
+.btnFilter {
+    font: 14px/16px RoundedElegance;
+    color: black;
+    padding: 8px 38px 8px 10px;
+    position: relative;
+    background: whiteBasic;
+    width: calc(50% - 10px);
+    display: none;
+    height: 32px;
+
+    &:before {
+        content: url('./img/filter.jpg');
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        margin-top: -6px;
+    }
+
+    @media (max-width: 600px) {
+        display: block;
+    }
+}
+
+.sort {
+    margin: 11px 0 0 10px;
+
+    @media (max-width: 600px) {
+        margin-top: 0;
+        width: calc(50% - 10px);
+    }
+}
+
+.activeOption {
+    background: gray4;
+    box-sizing: border-box;
+    font: 300 14px/17px RoundedElegance;
+    color: black;
+    padding: 6px 41px 6px 16px;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+
+    &:before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 8px 5px 0 5px;
+        border-color: green transparent transparent  transparent;
+        position: absolute;
+        top: 50%;
+        right: 16px;
+        margin-top: -5px;
+        transition: 0.25s ease-in;
+        transition-property: transform, border-color;
+    }
+
+    &:hover {
+        &:before {
+            transform: rotate(180deg);
+            transition: 0.25s ease-out;
+            border-color: black transparent transparent transparent;
+        }
+    }
+
+    @media (max-width: 600px) {
+        line-height: 16px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        width: 100%;
+    }
+}
+
+.productsSection {
+    background: gray3;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+}
