--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -20,11 +20,48 @@
     padding: 0 60px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     position: relative;
+
+    @media (max-width: 1355px) {
+        padding: 0 20px;
+    }
+
+    @media (max-width: 950px) {
+        padding: 0 16px;
+    }
 }
 
 .logoWrapper {
     margin-right: 130px;
+    min-width: 180px;
+
+    @media (max-width: 1220px) {
+        margin-right: 30px;
+    }
+
+    @media (max-width: 950px) {
+        display: none;
+    }
+}
+
+.logoImg {
+    display: block;
+    max-width: 100%;
+
+    @media (max-width: 1080px) {
+        width: 200px;
+    }
+
+    @media (max-width: 1000px) {
+        width: 180px;
+    }
+}
+
+.menuTop {
+    @media (max-width: 950px) {
+        display: none;
+    }
 }
 
 .menuItemTop {
@@ -33,6 +70,10 @@
     text-decoration: none;
     color: whiteBasic;
     margin-right: 30px;
+
+    @media (max-width: 1279px) {
+        margin-right: 15px;
+    }
 }
 
 .headerTopRight {
@@ -40,15 +81,43 @@
     align-items: center;
 }
 
-.wishWrapper {
-    margin-right: 20px;
-    position: relative;
-}
-
 .search {
     position: relative;
-    transition: max-height 0s linear 0.25s;
-    margin-right: 40px;
+    margin-right: 20px;
+    width: 233px;
+
+    @media (max-width: 1120px) {
+        margin-right: 15px;
+        width: 211px;
+    }
+
+    @media (max-width: 1000px) {
+        width: 181px;
+    }
+
+    @media (max-width: 950px) {
+        display: none;
+    }
+}
+
+.searchInputWrapper {
+    position: relative;
+
+    &:after {
+        position: absolute;
+        content: '';
+        width: 0;
+        background-color: whiteBasic;
+        right: 0;
+        bottom: 0;
+        height: 1px;
+        border-radius: 4px;
+        transition: .5s ease-in-out;
+    }
+
+    &.active:after {
+        width: 100%;
+    }
 }
 
 .searchInput {
@@ -57,19 +126,35 @@
     line-height: 16px;
     width: 202px;
     height: 17px;
-    margin-right: 15px;
     background-color: black;
     border: none;
-    border-bottom: 1px solid whiteBasic;
     outline: 0;
     color: whiteBasic;
+    padding-left: 40%;
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s ease-in-out;
 
     &::placeholder {
         color: rgba(255, 255, 255, 0.5);
     }
 
-    &:hover {
-        width: 202px;
+    &.active {
+        padding-left: 0;
+        visibility: visible;
+        opacity: 1;
+
+        &:after {
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 1120px) {
+        width: 180px;
+    }
+
+    @media (max-width: 1000px) {
+        width: 150px;
     }
 }
 
@@ -78,18 +163,15 @@
     height: 100%;
     position: absolute;
     top: 0;
-    background: center no-repeat url("./img/search.png");
+    background: center no-repeat url('./img/search.png');
     border: 0;
     cursor: pointer;
+    outline: 0;
+    margin-left: 15px;
 
     &:hover {
-        background-image: url("./img/search-hover.png");
+        background-image: url('./img/search-hover.png');
     }
-}
-
-.logoImg,
-.wishImg {
-    display: block;
 }
 
 .headerBottom {
@@ -98,6 +180,13 @@
     justify-content: center;
     background-color: whiteBasic;
     height: 50px;
+    z-index: 2;
+}
+
+.menuBottom {
+    @media (max-width: 950px) {
+        display: none;
+    }
 }
 
 .menuItemBottom {
@@ -116,7 +205,7 @@
 
     &:not(:last-child):after {
         position: absolute;
-        content: url("./img/meniItemLine.jpg");
+        content: url('./img/meniItemLine.jpg');
         right: -25px;
     }
 }
@@ -124,4 +213,119 @@
 .menuItemBottomPromotions {
     color: red;
     text-shadow: -0.2px 0 red, 0 0.2px red, 0.2px 0 red, 0 -0.2px red;
+}
+
+.searchBottom {
+    position: relative;
+    width: 248px;
+    display: none;
+
+    @media (max-width: 950px) {
+        display: block;
+    }
+}
+
+.searchInputWrapperBottom {
+    position: relative;
+
+    &:after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        background-color: black;
+        right: 0;
+        bottom: 0;
+        height: 1px;
+        border-radius: 4px;
+    }
+}
+
+.searchInputBottom {
+    font-family: RoundedElegance;
+    font-size: 14px;
+    line-height: 16px;
+    width: 213px;
+    height: 19px;
+    background-color: whiteBasic;
+    border: none;
+    outline: 0;
+    color: black;
+
+    &::placeholder {
+        color: rgba(35, 35, 35, 0.7);
+    }
+}
+
+.searchBtnBottom {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    top: 0;
+    background: center no-repeat url('./img/searchBottom.png');
+    border: 0;
+    outline: 0;
+    margin-left: 17px;
+}
+
+.mobileMenu {
+    position: relative;
+    /* width: 14px;
+    height: 14px; */
+    display: none;
+
+    &:after {
+        content: url('./img/menu.png');
+        width: 20px;
+        height: 14px;
+    }
+
+    &.active:after {
+        content: url('./img/close.png');
+        width: 14px;
+        height: 14px;
+        margin-left: 3px;
+    }
+
+    @media (max-width: 950px) {
+        display: flex;
+    }
+}
+
+.popupContainer {
+    position: fixed;
+    left: 0;
+    top: 0;
+    backdrop-filter: blur(0px);
+    width: 100vw;
+    height: 100vh;
+    margin-top: 48px;
+    overflow-y: auto;
+    max-height: 0;
+    transition: max-height 0.25s ease-out;
+    z-index: 1;
+
+    &.active {
+        background: rgba(255, 255, 255, 0.01);
+        max-height: 20000px;
+        backdrop-filter: blur(4px);
+        transition: max-height 0.25s ease-in;
+    }
+}
+
+.popupMobile {
+    position: absolute;
+    left: 0;
+    top: 50px;
+    flex-direction: column;
+    width: 100%;
+    max-width: 304px;
+    display: flex;
+    max-height: 0;
+    transition: max-height 0.25s ease-out;
+    overflow: hidden;
+
+    &.active {
+        max-height: 1000px;
+        transition: max-height 0.25s ease-in;
+    }
 }
