--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -159,14 +159,14 @@
 }
 
 .searchBtn {
+    @mixin removeDefaultButton;
+    padding: 0;
     width: 16px;
     height: 100%;
     position: absolute;
     top: 0;
     background: center no-repeat url('./img/search.png');
-    border: 0;
     cursor: pointer;
-    outline: 0;
     margin-left: 15px;
 
     &:hover {
@@ -196,7 +196,7 @@
     color: black;
     position: relative;
     margin-right: 50px;
-    text-shadow: -0.1px 0 black, 0 0.1px black, 0.1px 0 black, 0 -0.1px black;
+    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
 
     &:last-child {
         margin-right: 0;
@@ -256,37 +256,79 @@
 }
 
 .searchBtnBottom {
+    @mixin removeDefaultButton;
+    padding: 0;
     width: 18px;
     height: 18px;
     position: absolute;
     top: 0;
     background: center no-repeat url('./img/searchBottom.png');
-    border: 0;
-    outline: 0;
     margin-left: 17px;
 }
 
 .mobileMenu {
     position: relative;
-    /* width: 14px;
-    height: 14px; */
     display: none;
-
-    &:after {
-        content: url('./img/menu.png');
-        width: 20px;
-        height: 14px;
-    }
-
-    &.active:after {
-        content: url('./img/close.png');
-        width: 14px;
-        height: 14px;
-        margin-left: 3px;
-    }
 
     @media (max-width: 950px) {
         display: flex;
+    }
+}
+
+.mobileMenuBtn {
+    @mixin removeDefaultButton;
+    padding: 0;
+    width: 20px;
+    height: 14px;
+    position: relative;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
+    cursor: pointer;
+
+    span {
+        display: block;
+        position: absolute;
+        height: 2px;
+        width: 100%;
+        background-color: whiteBasic;
+        border-radius: 3px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+    }
+
+    span:nth-child(1) {
+        top: 0px;
+    }
+
+    span:nth-child(2),
+    span:nth-child(3) {
+        top: 6px;
+    }
+
+    span:nth-child(4) {
+        top: 12px;
+    }
+
+    &.active span:nth-child(1) {
+        top: 6px;
+        width: 0%;
+        left: 50%;
+    }
+
+    &.active span:nth-child(2) {
+        transform: rotate(45deg);
+    }
+
+    &.active span:nth-child(3) {
+        transform: rotate(-45deg);
+    }
+
+    &.active span:nth-child(4) {
+        top: 6px;
+        width: 0%;
+        left: 50%;
     }
 }
 
@@ -296,18 +338,13 @@
     left: 0;
     backdrop-filter: blur(0px);
     width: 100vw;
-    /* height: 100vh; */
     height: calc(100vh - 99px);
     overflow-y: auto;
-    max-height: 0;
-    transition: max-height 0.25s ease-out;
     z-index: 1;
 
     &.active {
         background: rgba(255, 255, 255, 0.01);
-        max-height: 20000px;
         backdrop-filter: blur(4px);
-        transition: max-height 0.25s ease-in;
     }
 }
 
@@ -343,6 +380,7 @@
     color: black;
     padding: 15px 16px;
     position: relative;
+    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
     border-bottom: 1px solid rgba(216, 216, 216, 0.5);
 
     &:first-child {
@@ -360,12 +398,16 @@
     }
 }
 
+.menuItemTopPromotions {
+    color: red;
+    text-shadow: -0.2px 0 red, 0 0.2px red, 0.2px 0 red, 0 -0.2px red;
+}
+
 .mobileSocials {
     display: flex;
     align-items: center;
     background-color: whiteBasic;
-    height: 83px;
-    padding-left: 16px;
+    padding: 23px 16px;
 }
 
 .googlePlus,
