--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -15,8 +15,8 @@
     }
 }
 
-.iconCart:after {
-    content: url("./img/cart.png");
+.iconCartImg {
+    display: block;
 }
 
 .quantityAll {
@@ -36,36 +36,30 @@
 }
 
 .popupContainer {
-    display: none;
     position: fixed;
     z-index: 10;
     left: 0;
-    top: 0;
+    top: 50px;
     width: 100%;
     height: 100%;
     cursor: default;
     overflow: auto;
-    /* background-color: rgba(35, 35, 35, 0.5); */
+    background-color: rgba(35, 35, 35, 0.5);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
 
     &.active {
-        display: block;
+        visibility: visible;
+        opacity: 1;
     }
-}
-
-.cover {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(35, 35, 35, 0.5);
 }
 
 .popup {
     width: 481px;
     background: whiteBasic;
     position: absolute;
-    top: 50px;
+    top: 0;
     right: 60px;
 
     font-family: RoundedElegance;
@@ -77,9 +71,142 @@
 .title {
     font-size: 24px;
     line-height: 28px;
-    margin: 20px 0 40px;
+    margin: 20px 0;
     text-align: center;
     color: black;
+}
+
+.productsContainer {
+    max-height: 324px;
+    overflow-y: auto;
+}
+
+.cartItemWrapper {
+    position: relative;
+    width: 100%;
+
+    &:before {
+        position: absolute;
+        content: '';
+        top: 0;
+        background-color: rgba(216, 216, 216, 0.5);
+        width: 100%;
+        height: 1px;
+    }
+}
+
+.cartItem {
+    display: flex;
+    padding: 20px 25px 20px 30px;
+}
+
+.productImg {
+    width: 120px;
+    height: 120px;
+    margin-right: 30px;
+}
+
+.productOption {
+    display: flex;
+    align-items: center;
+    margin-bottom: 21px;
+}
+
+.productName {
+    font-size: 18px;
+    line-height: 21px;
+    color: black;
+    margin-right: 5px;
+}
+
+.productNumber {
+    font-size: 12px;
+    line-height: 14px;
+    color: gray;
+    margin-right: 10px;
+}
+
+.wishBtn,
+.removeBtn{
+    @mixin removeDefaultButton;
+    padding: 0;
+    cursor: pointer;
+}
+
+.wishBtn {
+    margin-right: 20px;
+}
+
+.wishBtnImg,
+.removeBtnImg {
+    display: block;
+}
+
+.productSize {
+    font-size: 14px;
+    line-height: 16px;
+    color: black;
+    margin-bottom: 6px;
+}
+
+.productQuantity {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 6px;
+}
+
+.quantitySub,
+.quantityAdd {
+    @mixin removeDefaultButton;
+    padding: 0 5px;
+    position: absolute;
+    color: gray;
+    font-family: RoundedElegance;
+    font-size: 18px;
+    line-height: 21px;
+    height: 100%;
+    top: 1px;
+    cursor: pointer;
+}
+
+.quantitySub {
+    left: 0;
+}
+.quantityAdd {
+    right: 0;
+}
+
+.quantityInput {
+    width: 69px;
+    height: 22px;
+    font-family: RoundedElegance;
+    font-size: 18px;
+    line-height: 21px;
+    color: black;
+    text-align: center;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    outline: none;
+    padding-top: 3px;
+}
+
+.productPrices {
+    display: flex;
+    align-items: center;
+}
+
+.productOldPrice {
+    font-size: 18px;
+    line-height: 21px;
+    text-decoration-line: line-through;
+    color: gray;
+    margin-right: 20px;
+}
+
+.productPrice {
+    font-size: 24px;
+    line-height: 28px;
+    color: red;
 }
 
 .totalPriceContainer {
