add order popup

--- a/src/apps/client/ui/pages/CheckoutPage/CheckoutPage.css
+++ b/src/apps/client/ui/pages/CheckoutPage/CheckoutPage.css
@@ -283,6 +283,7 @@ textarea {
     background: black;
     min-width: 200px;
     display: block;
+    cursor: pointer;
 
     @media (max-width: 450px) {
         margin-top: 20px;
