--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -1,5 +1,75 @@
+@value whiteBasic from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
+@value black from '../../../../../css/colors.css';
+@value black1 from '../../../../../css/colors.css';
 
 .articles {
     background-color: gray3;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.article {
+    max-width: 605px;
+    width: 50%;
+    background-color: whiteBasic;
+    padding: 20px;
+    margin: 15px;
+    font-family: RoundedElegance;
+}
+
+.titleLink {
+    text-decoration: none;
+}
+
+.title {
+    font-size: 24px;
+    line-height: 28px;
+    color: black;
+    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    margin-bottom: 20px;
+}
+
+.titleUnderline {
+    border-bottom: 1px solid black;
+}
+
+.article p {
+    font-size: 18px;
+    line-height: 21px;
+    color: rgba(35, 35, 35, 0.7);
+    margin-bottom: 20px;
+}
+
+.moreInfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.readMoreBtn {
+    @mixin removeDefaultButton;
+    padding: 0;
+    font-family: RoundedElegance;
+    font-size: 18px;
+    line-height: 21px;
+    color: black1;
+    cursor: pointer;
+    position: relative;
+
+    &:after {
+        position: absolute;
+        content: '';
+        bottom: 1px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: black1;
+    }
+}
+
+.date {
+    font-size: 14px;
+    line-height: 16px;
 }
