--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,6 +1,7 @@
 @value whiteBasic: #FFFFFF;
 @value blackBasic: #000000;
 @value black: #232323;
+@value black1: #2B2B2C;
 @value green: #25716C;
 @value red: #DC4E41;
 @value gray: #919191;
@@ -9,3 +10,4 @@
 @value gray3: #F1F1F1;
 @value gray4: #FAFAFA;
 @value gray5: #E5E5E5;
+@value gray6: #656565;
