--- a/src/apps/client/ui/pages/Contacts/Contacts.css
+++ b/src/apps/client/ui/pages/Contacts/Contacts.css
@@ -8,7 +8,7 @@
     background-color: whiteBasic;
     font-family: RoundedElegance;
 
-    @media (max-width: 600px) {
+    @media (max-width: 1279px) {
         padding: 0 16px;
     }
 }
@@ -90,6 +90,10 @@
 .addressContainer {
     text-align: center;
     margin: 30px 0;
+
+    @media (max-width: 600px) {
+        margin: 30px 0 15px;
+    }
 }
 
 .emailContainer {
@@ -130,5 +134,26 @@
 
     &:last-child {
         margin-bottom: 0;
+    }
+}
+
+.map {
+    margin-bottom: 30px;
+    background: url('./img/map.jpg') no-repeat center;
+    background-size: contain;
+    max-width: 1240px;
+    width: 100%;
+    height: 439px;
+
+    @media (max-width: 1270px) {
+        height: 0;
+        padding-top: 35.4%;
+    }
+
+    @media (max-width: 600px) {
+        background-size: cover;
+        width: 100vw;
+        height: 230px;
+        padding-top: 0;
     }
 }
