--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -5,6 +5,11 @@
 
 .articles {
     background-color: gray3;
+}
+
+.articlesContainer {
+    max-width: 1360px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
