--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -2,9 +2,11 @@
 @value black from '../../../../../css/colors.css';
 @value red from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
+@value green from '../../../../../css/colors.css';
 
 .product {
     width: 288px;
+    min-width: 288px;
     height: 365px;
     position: relative;
     display: flex;
@@ -12,7 +14,7 @@
     justify-content: space-between;
     max-height: 365px;
     overflow: hidden;
-    margin: 30px 0 0 30px;
+    margin: 30px 30px 0 0;
     background: whiteBasic;
 }
 
@@ -32,12 +34,13 @@
     font-size: 18px;
     line-height: 21px;
     padding: 0 18px;
-    background: whiteBasic;
-    color: black;
+    background: green;
+    color: whiteBasic;
     margin-top: 8px;
 }
 .discount {
-    color: red;
+    color: red;    
+    background: whiteBasic;
 }
 
 .bottomPanel {
