--- a/src/apps/client/ui/components/Article/Article.css
+++ b/src/apps/client/ui/components/Article/Article.css
@@ -1,24 +1,19 @@
+@value blackBasic from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
-
-{/*.articles {
-    display: flex;
-    justify-content: center;
-}
+@value gray3 from '../../../../../css/colors.css';
 
 .article {
-    max-width: 1240px;
-    margin: 0 auto;
     font-family: RoundedElegance;
-}*/}
-.articles {
-    max-width: 1360px;
-    margin: 0 auto;
+
+    @media (max-width: 1280px) {
+        padding: 0 16px;
+    }
 }
 
-.article {
+.articleContainer {
     max-width: 1240px;
-    margin: 0 auto;
-    font-family: RoundedElegance;
+    width: 100%;
+    margin: 30px auto;
 }
 
 .titleWrapper {
@@ -26,18 +21,27 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
+
+    @media (max-width: 1200px) {
+        margin-bottom: 25px;
+    }
 }
 
-.article h1,
-.article h2 {
+.articleContainer h1,
+.articleContainer h2 {
     color: black;
     text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
 }
 
-.article h1 {
+.articleContainer h1 {
     font-size: 24px;
     line-height: 28px;
     position: relative;
+
+    @media (max-width: 767px) {
+        font-size: 20px;
+        line-height: 23px;
+    }
 
     &:after {
         position: absolute;
@@ -48,6 +52,23 @@
         width: 190px;
         height: 2px;
         background-color: black;
+
+        @media (max-width: 1200px) {
+            top: auto;
+            transform: translateY(0);
+            left: 0;
+            bottom: -10px;
+        }
+    }
+}
+
+.date {
+    font-size: 14px;
+    line-height: 16px;
+    color: blackBasic;
+
+    @media (max-width: 1023px) {
+        display: none;
     }
 }
 
@@ -55,29 +76,37 @@
     margin-bottom: 30px;
 }
 
-.article h2 {
+.articleContainer h2 {
     font-size: 18px;
     line-height: 21px;
     margin-bottom: 15px;
 }
 
-.article p {
+.articleContainer p {
     max-width: 900px;
     font-size: 16px;
     line-height: 18px;
     color: rgba(35, 35, 35, 0.7);
 }
 
-.article li {
-    position: relative;
-    margin-left: 15px;
+.articleContainer li {
+    color: rgba(35, 35, 35, 0.7);
+    background: url('./img/bullet.png') left center no-repeat;
+    padding-left: 25px;
+    margin-bottom: 15px;
 
-    &:before {
-        position: absolute;
-        content: '';
-        width: 10px;
-        height: 10px;
-        left: -15px;
-        background: url('./img/bullet.png') no-repeat center;
+    &:last-child {
+        margin-bottom: 30px;
+    }
+}
+
+.articleContainer img {
+    max-width: 100%;
+
+    @media (max-width: 541px) {
+        max-width: none;
+        margin-left: -16px;
+        width: 100vw;
+        height: 180px;
     }
 }
