--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -29,6 +29,7 @@
 
     @media (max-width: 950px) {
         padding: 0 16px;
+        justify-content: flex-start;
     }
 }
 
@@ -41,7 +42,12 @@
     }
 
     @media (max-width: 950px) {
-        display: none;
+        margin: 0 0 0 20px;
+        min-width: 125px;
+    }
+
+    @media (max-width: 350px) {
+        margin: 0 0 0 10px;
     }
 }
 
@@ -55,6 +61,14 @@
 
     @media (max-width: 1000px) {
         width: 180px;
+    }
+
+    @media (max-width: 600px) {
+        width: 142px;
+    }
+
+    @media (max-width: 350px) {
+        width: 125px;
     }
 }
 
@@ -79,6 +93,10 @@
 .headerTopRight {
     display: flex;
     align-items: center;
+
+    @media (max-width: 950px) {
+        margin-left: auto;
+    }
 }
 
 .search {
@@ -341,7 +359,7 @@
     height: calc(100vh - 99px);
     max-height: 0;
     overflow-y: auto;
-    z-index: 1;
+    z-index: 2;
     transition: max-height 0.25s ease-out;
 
     &.active {
