--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -22,6 +22,25 @@
     padding: 20px;
     margin: 15px;
     font-family: RoundedElegance;
+
+    @media (max-width: 1280px) {
+        width: 45%;
+    }
+
+    @media (max-width: 850px) {
+        width: 100%;
+        margin-bottom: 20px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    @media (max-width: 600px) {
+        width: 100%;
+        margin: 0 0 20px 0;
+        padding: 20px 16px;
+    }
 }
 
 .titleLink {
@@ -34,6 +53,12 @@
     color: black;
     text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
     margin-bottom: 20px;
+
+    @media (--media-tablet-s) {
+        font-size: 18px;
+        line-height: 21px;
+        margin-bottom: 10px;
+    }
 }
 
 .titleUnderline {
@@ -45,6 +70,12 @@
     line-height: 21px;
     color: rgba(35, 35, 35, 0.7);
     margin-bottom: 20px;
+
+    @media (--media-tablet-s) {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 15px;
+    }
 }
 
 .moreInfo {
@@ -71,6 +102,11 @@
         width: 100%;
         height: 1px;
         background-color: black1;
+    }
+
+    @media (--media-tablet-s) {
+        font-size: 16px;
+        line-height: 18px;
     }
 }
 
