--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -27,21 +27,21 @@
         padding: 0 20px;
     }
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         padding: 0 16px;
         justify-content: flex-start;
     }
 }
 
 .logoWrapper {
-    margin-right: 130px;
+    margin-right: 100px;
     min-width: 180px;
 
-    @media (max-width: 1220px) {
+    @media (max-width: 1230px) {
         margin-right: 30px;
     }
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         margin: 0 0 0 20px;
         min-width: 125px;
     }
@@ -55,11 +55,11 @@
     display: block;
     max-width: 100%;
 
-    @media (max-width: 1080px) {
+    @media (max-width: 1160px) {
         width: 200px;
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1135px) {
         width: 180px;
     }
 
@@ -73,17 +73,17 @@
 }
 
 .menuTop {
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         display: none;
     }
 }
 
 .menuItemTop {
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 16px;
+    line-height: 18px;
     text-decoration: none;
     color: whiteBasic;
-    margin-right: 30px;
+    margin-right: 25px;
 
     @media (max-width: 1279px) {
         margin-right: 15px;
@@ -94,7 +94,7 @@
     display: flex;
     align-items: center;
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         margin-left: auto;
     }
 }
@@ -109,11 +109,11 @@
         width: 211px;
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1020px) {
         width: 181px;
     }
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         display: none;
     }
 }
@@ -127,7 +127,7 @@
         width: 0;
         background-color: whiteBasic;
         right: 0;
-        bottom: 0;
+        bottom: -2px;
         height: 1px;
         border-radius: 4px;
         transition: .5s ease-in-out;
@@ -140,8 +140,8 @@
 
 .searchInput {
     font-family: RoundedElegance;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 16px;
+    line-height: 18px;
     width: 202px;
     height: 17px;
     background-color: black;
@@ -171,7 +171,7 @@
         width: 180px;
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1020px) {
         width: 150px;
     }
 }
@@ -201,7 +201,7 @@
 }
 
 .menuBottom {
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         display: none;
     }
 }
@@ -237,7 +237,7 @@
     width: 248px;
     display: none;
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         display: block;
     }
 }
@@ -259,8 +259,8 @@
 
 .searchInputBottom {
     font-family: RoundedElegance;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 16px;
+    line-height: 18px;
     width: 213px;
     height: 19px;
     background-color: whiteBasic;
@@ -288,7 +288,7 @@
     position: relative;
     display: none;
 
-    @media (max-width: 950px) {
+    @media (max-width: 991px) {
         display: flex;
     }
 }
