--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -10,6 +10,7 @@
 .articlesContainer {
     max-width: 1360px;
     margin: 0 auto;
+    padding-top: 15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -30,14 +31,9 @@
     @media (max-width: 850px) {
         width: 100%;
         margin-bottom: 20px;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
     }
 
     @media (max-width: 600px) {
-        width: 100%;
         margin: 0 0 20px 0;
         padding: 20px 16px;
     }
