--- a/src/apps/client/ui/components/NotFoundPage/NotFoundPage.css
+++ b/src/apps/client/ui/components/NotFoundPage/NotFoundPage.css
@@ -1,15 +1,21 @@
 @value blackBasic from '../../../../../css/colors.css';
 @value whiteBasic from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
-@value gray5 from '../../../../../css/colors.css';
+@value gray3 from '../../../../../css/colors.css';
 
 .root {
-    padding-bottom: 30px;
-    background: gray5;
+    height: 100%;
+    padding-bottom: 40px;
+    background: gray3;
+
+    @media (max-width: 600px) {
+        padding-bottom: 30px;
+    }
 }
 
 .contentWrap {
-    background: white;
+    background: whiteBasic;
+    height: 100%;
 }
 
 .content {
