move Pagination to the bottom of the page

--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -4,7 +4,10 @@
 @value black1 from '../../../../../css/colors.css';
 
 .articles {
+    position: relative;
+    height: 100%;
     background-color: gray3;
+    padding-bottom: 81px;
 }
 
 .articlesContainer {
