--- a/src/apps/client/ui/components/Pagination/Pagination.css
+++ b/src/apps/client/ui/components/Pagination/Pagination.css
@@ -3,6 +3,8 @@
 @value black from '../../../../../css/colors.css';
 
 .pagination {
+    position: absolute;
+    bottom: 0;
     padding: 15px 0 30px;
     display: flex;
     align-items: center;
